[package]
name = "crypto-literal"
version = "0.1.2"
authors = ["kgv <kgv@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "Crypto literal procedural macros."
homepage = "https://crates.io/crates/crypto-literal"
documentation = "https://docs.rs/crypto-literal"
repository = "https://github.com/kgv/crypto-literal"
readme = "README.md"
edition = "2018"

[dependencies]
bincode = "1.2.1"
crypto-literal-algorithm = "0.1.1"
crypto-literal-macro = "0.1.1"
derive_more = "0.99.3"
serde = "1.0.105"

[dev-dependencies]
anyhow = "1.0.27"
lazy_static = "1.4.0"

[workspace]
members = ["algorithm", "macro"]